[package]
name = "winitsize01"
version = "0.1.0"
authors = ["jp"]
edition = "2021"
publish = false

[dependencies]
winit = "^0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
softbuffer = { version = "0.4.0", default-features = false, features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
] }

